--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Convert document-oriented XML to data structures, preserving element order'
+abstract: 'Represent XML as data structure preserving element order'
 author:
   - 'Jakob Voß'
 build_requires: {}
@@ -13,9 +13,10 @@ meta-spec:
   version: 1.4
 name: XML-Struct
 requires:
+  Moo: 1.0
   XML::LibXML: 2.0
 resources:
   bugtracker: https://github.com/nichtich/XML-Ordered/issues
   homepage: https://github.com/nichtich/XML-Ordered
   repository: https://github.com/nichtich/XML-Ordered.git
-version: 0.03
+version: 0.04
